updates the links

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,30 @@ header .jump-links .link {
 header .jump-links .link a{
   color: #A1CBE7;
 }
+.dropbtn {
+    background-color: rgb(27,27,27);
+    color: #A1CBE7;
+    padding: 5px;
+    font-size: 20px;
+    border: none;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
 .left {
   width: 32%;
   display: inline-block;
